# data-explorer

./: .flake8  .gitignore  README.md  alembic.ini  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test.ipynb
alembic/: env.py
alembic/seeder/: TestData.csv
alembic/versions/: 4ae9aee8d357_add_chemical_data_table.py  8f1d647a2428_seed_data_from_dataset.py
api/: database.py  index.py  models.py  schema.py
api/definitions/: chemicalData.py
app/: layout.tsx  page.tsx
app/dataset/: page.tsx
app/dataset/[id]/: page.tsx
components/dashboard/: columns.tsx  data-table-faceted-filter.tsx  data-table.tsx  dataset-details-view.tsx
components/ui/: debounced-input.tsx
lib/: data.ts  definitions.ts
